[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["David Lachut <dslachut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.10"
numpy = "^1.26.3"
ipykernel = "^6.28.0"
black = {extras = ["jupyter"], version = "^23.12.1"}
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
